refactor: rearrange sound map to be more efficient and scalable